<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_fragment_background">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cardMargin"
            android:text="@string/category_type_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <RadioButton
            android:id="@+id/popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_popular"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

        <RadioButton
            android:id="@+id/top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_top"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />


        <RadioButton
            android:id="@+id/soon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_soon"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />


        <RadioButton
            android:id="@+id/inCinema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_in_cinema"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

    </RadioGroup>

    <include layout="@layout/bottom_navigation_bar"
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>