<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/appNB"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:menu="@menu/app_bar_menu"
        android:background="@color/menu_background"
        app:navigationIcon="@drawable/ic_baseline_menu_24"
        app:title="@string/app_name"
        app:titleTextColor="@color/white">

        <ImageView
            android:layout_gravity="end"
            android:id="@+id/webResState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_cloud_queue_24"
            android:contentDescription="@string/web_service_state" />

        <ImageView
            android:layout_marginEnd="15dp"
            android:layout_gravity="end"
            android:id="@+id/networkState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_signal_cellular_4_bar_24"
            android:contentDescription="@string/network_state" />

    </com.google.android.material.appbar.MaterialToolbar>

</com.google.android.material.appbar.AppBarLayout>